Se agrega  función para convertir a mayúsculas y los eventos blur de los campos de RFC y CURP.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,26 @@
    
     <h1 id="encabezado1">DOM Ejercicio</h1>
     <h2 id="encabezado2">DOM Exercise</h2>
-    <em>Subrayado</em>
+    <em>Cursiva</em>
+
+    <div class="mb-3">
+      <label for="txtRFC" class="form-label">RFC:</label>
+      <input type="text" class="form-control" id="txtRFC" placeholder="Escribe tu RFC">
+    </div>
+
+    <div class="mb-3">
+      <label for="txtCURP" class="form-label">CURP:</label>
+      <input type="text" class="form-control" id="txtCURP" placeholder="Escribe tu CURP">
+    </div>
+
+    <div class="mb-3">
+      <label for="txTelefono" class="form-label">Teléfono</label>
+      <input type="text" class="form-control" id="txTelefono" placeholder="5519582695">
+    </div>
+
     <button type="button" id="btnMostar">Mostrar</button>
+
+
 
 <main class="container">
 <ul class="list-group">
